results/04_policy_deny_ops_to_ops/iptables-ocp311-node1
=> iptables -nL
Chain INPUT (policy ACCEPT)
target     prot opt source               destination         
KUBE-NODEPORT-NON-LOCAL  all  --  0.0.0.0/0            0.0.0.0/0            /* Ensure that non-local NodePort traffic can flow */
KUBE-EXTERNAL-SERVICES  all  --  0.0.0.0/0            0.0.0.0/0            ctstate NEW /* kubernetes externally-visible service portals */
OPENSHIFT-FIREWALL-ALLOW  all  --  0.0.0.0/0            0.0.0.0/0            /* firewall overrides */
KUBE-FIREWALL  all  --  0.0.0.0/0            0.0.0.0/0           
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0            state RELATED,ESTABLISHED
ACCEPT     icmp --  0.0.0.0/0            0.0.0.0/0           
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0           
ACCEPT     tcp  --  0.0.0.0/0            0.0.0.0/0            state NEW tcp dpt:22
OS_FIREWALL_ALLOW  all  --  0.0.0.0/0            0.0.0.0/0           
REJECT     all  --  0.0.0.0/0            0.0.0.0/0            reject-with icmp-host-prohibited

Chain FORWARD (policy DROP)
target     prot opt source               destination         
DOCKER-ISOLATION  all  --  0.0.0.0/0            0.0.0.0/0           
DOCKER     all  --  0.0.0.0/0            0.0.0.0/0           
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0            ctstate RELATED,ESTABLISHED
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0           
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0           
KUBE-FORWARD  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes forwarding rules */
OPENSHIFT-ADMIN-OUTPUT-RULES  all  --  0.0.0.0/0            0.0.0.0/0            /* administrator overrides */
OPENSHIFT-FIREWALL-FORWARD  all  --  0.0.0.0/0            0.0.0.0/0            /* firewall overrides */
REJECT     all  --  0.0.0.0/0            0.0.0.0/0            reject-with icmp-host-prohibited

Chain OUTPUT (policy ACCEPT)
target     prot opt source               destination         
KUBE-SERVICES  all  --  0.0.0.0/0            0.0.0.0/0            ctstate NEW /* kubernetes service portals */
KUBE-FIREWALL  all  --  0.0.0.0/0            0.0.0.0/0           

Chain DOCKER (1 references)
target     prot opt source               destination         

Chain DOCKER-ISOLATION (1 references)
target     prot opt source               destination         
RETURN     all  --  0.0.0.0/0            0.0.0.0/0           

Chain KUBE-EXTERNAL-SERVICES (1 references)
target     prot opt source               destination         

Chain KUBE-FIREWALL (2 references)
target     prot opt source               destination         
DROP       all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes firewall for dropping marked packets */ mark match 0x8000/0x8000

Chain KUBE-FORWARD (1 references)
target     prot opt source               destination         
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes forwarding rules */ mark match 0x1/0x1

Chain KUBE-NODEPORT-NON-LOCAL (1 references)
target     prot opt source               destination         

Chain KUBE-SERVICES (1 references)
target     prot opt source               destination         

Chain OPENSHIFT-ADMIN-OUTPUT-RULES (1 references)
target     prot opt source               destination         

Chain OPENSHIFT-FIREWALL-ALLOW (1 references)
target     prot opt source               destination         
ACCEPT     udp  --  0.0.0.0/0            0.0.0.0/0            udp dpt:4789 /* VXLAN incoming */
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0            /* from SDN to localhost */
ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0            /* from docker to localhost */

Chain OPENSHIFT-FIREWALL-FORWARD (1 references)
target     prot opt source               destination         
DROP       all  --  10.128.0.0/14        0.0.0.0/0            /* attempted resend after connection close */ ctstate INVALID
ACCEPT     all  --  0.0.0.0/0            10.128.0.0/14        /* forward traffic from SDN */
ACCEPT     all  --  10.128.0.0/14        0.0.0.0/0            /* forward traffic to SDN */

Chain OS_FIREWALL_ALLOW (1 references)
target     prot opt source               destination         
ACCEPT     tcp  --  0.0.0.0/0            0.0.0.0/0            state NEW tcp dpt:10250
ACCEPT     tcp  --  0.0.0.0/0            0.0.0.0/0            state NEW tcp dpt:10256
ACCEPT     tcp  --  0.0.0.0/0            0.0.0.0/0            state NEW tcp dpt:80
ACCEPT     tcp  --  0.0.0.0/0            0.0.0.0/0            state NEW tcp dpt:443
ACCEPT     udp  --  0.0.0.0/0            0.0.0.0/0            state NEW udp dpt:4789
ACCEPT     tcp  --  0.0.0.0/0            0.0.0.0/0            state NEW tcp dpts:9000:10000
ACCEPT     tcp  --  0.0.0.0/0            0.0.0.0/0            state NEW tcp dpt:179
=> iptables -nL -t nat
Chain PREROUTING (policy ACCEPT)
target     prot opt source               destination         
KUBE-PORTALS-CONTAINER  all  --  0.0.0.0/0            0.0.0.0/0            /* handle ClusterIPs; NOTE: this must be before the NodePort rules */
KUBE-SERVICES  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */
KUBE-HOSTPORTS  all  --  0.0.0.0/0            0.0.0.0/0            /* kube hostport portals */ ADDRTYPE match dst-type LOCAL
DOCKER     all  --  0.0.0.0/0            0.0.0.0/0            ADDRTYPE match dst-type LOCAL
KUBE-NODEPORT-CONTAINER  all  --  0.0.0.0/0            0.0.0.0/0            ADDRTYPE match dst-type LOCAL /* handle service NodePorts; NOTE: this must be the last rule in the chain */

Chain INPUT (policy ACCEPT)
target     prot opt source               destination         

Chain OUTPUT (policy ACCEPT)
target     prot opt source               destination         
KUBE-PORTALS-HOST  all  --  0.0.0.0/0            0.0.0.0/0            /* handle ClusterIPs; NOTE: this must be before the NodePort rules */
KUBE-SERVICES  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */
KUBE-HOSTPORTS  all  --  0.0.0.0/0            0.0.0.0/0            /* kube hostport portals */ ADDRTYPE match dst-type LOCAL
DOCKER     all  --  0.0.0.0/0           !127.0.0.0/8          ADDRTYPE match dst-type LOCAL
KUBE-NODEPORT-HOST  all  --  0.0.0.0/0            0.0.0.0/0            ADDRTYPE match dst-type LOCAL /* handle service NodePorts; NOTE: this must be the last rule in the chain */

Chain POSTROUTING (policy ACCEPT)
target     prot opt source               destination         
MASQUERADE  all  --  172.17.0.0/16        0.0.0.0/0           
OPENSHIFT-MASQUERADE  all  --  0.0.0.0/0            0.0.0.0/0            /* rules for masquerading OpenShift traffic */
KUBE-POSTROUTING  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes postrouting rules */
MASQUERADE  all  --  127.0.0.0/8          0.0.0.0/0            /* SNAT for localhost access to hostports */

Chain DOCKER (2 references)
target     prot opt source               destination         
RETURN     all  --  0.0.0.0/0            0.0.0.0/0           

Chain KUBE-HOSTPORTS (2 references)
target     prot opt source               destination         

Chain KUBE-MARK-DROP (0 references)
target     prot opt source               destination         
MARK       all  --  0.0.0.0/0            0.0.0.0/0            MARK or 0x8000

Chain KUBE-MARK-MASQ (18 references)
target     prot opt source               destination         
MARK       all  --  0.0.0.0/0            0.0.0.0/0            MARK or 0x1

Chain KUBE-NODEPORT-CONTAINER (1 references)
target     prot opt source               destination         

Chain KUBE-NODEPORT-HOST (1 references)
target     prot opt source               destination         

Chain KUBE-NODEPORTS (1 references)
target     prot opt source               destination         

Chain KUBE-PORTALS-CONTAINER (1 references)
target     prot opt source               destination         

Chain KUBE-PORTALS-HOST (1 references)
target     prot opt source               destination         

Chain KUBE-POSTROUTING (1 references)
target     prot opt source               destination         
MASQUERADE  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service traffic requiring SNAT */ mark match 0x1/0x1

Chain KUBE-SEP-2Y5VLQNKQRZGKMGH (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.16.99.31         0.0.0.0/0            /* default/router:1936-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/router:1936-tcp */ tcp to:172.16.99.31:1936

Chain KUBE-SEP-35LYRIYLDOKO2LBI (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.129.0.16          0.0.0.0/0            /* proj-ops/client-ops:8443-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/client-ops:8443-tcp */ tcp to:10.129.0.16:8443

Chain KUBE-SEP-4DWPNOZGSTC5ZGSY (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.16.99.31         0.0.0.0/0            /* default/router:443-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/router:443-tcp */ tcp to:172.16.99.31:443

Chain KUBE-SEP-4TUTTIJ2UOQVWSKB (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.16.99.21         0.0.0.0/0            /* default/kubernetes:dns */
DNAT       udp  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:dns */ udp to:172.16.99.21:8053

Chain KUBE-SEP-DYBCDPYDI3EFDB3U (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.16.99.31         0.0.0.0/0            /* default/router:80-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/router:80-tcp */ tcp to:172.16.99.31:80

Chain KUBE-SEP-IKYHWPR237VRLK44 (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.16.99.21         0.0.0.0/0            /* default/kubernetes:dns-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:dns-tcp */ tcp to:172.16.99.21:8053

Chain KUBE-SEP-JCLB6SDYRDYTDDDM (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.131.0.16          0.0.0.0/0            /* proj-ops/hello-ops:8080-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/hello-ops:8080-tcp */ tcp to:10.131.0.16:8080

Chain KUBE-SEP-JXCH5FI3G5OJUXGJ (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.131.0.16          0.0.0.0/0            /* proj-ops/hello-ops:8443-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/hello-ops:8443-tcp */ tcp to:10.131.0.16:8443

Chain KUBE-SEP-LQCK36TWXKYXZNE4 (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.128.0.22          0.0.0.0/0            /* openshift-console/console:https */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* openshift-console/console:https */ tcp to:10.128.0.22:8443

Chain KUBE-SEP-OB5IWPCFFLXDNZ5H (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.129.0.16          0.0.0.0/0            /* proj-ops/client-ops:8080-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/client-ops:8080-tcp */ tcp to:10.129.0.16:8080

Chain KUBE-SEP-OTJGSWA3CRZRRKGR (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.131.0.24          0.0.0.0/0            /* proj-dev/client-dev:8443-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/client-dev:8443-tcp */ tcp to:10.131.0.24:8443

Chain KUBE-SEP-OZQI5YLIP6C22J6A (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.128.0.20          0.0.0.0/0            /* default/registry-console:registry-console */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/registry-console:registry-console */ tcp to:10.128.0.20:9090

Chain KUBE-SEP-QUGJG6JSJAZVGMPA (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.129.0.11          0.0.0.0/0            /* proj-dev/hello-dev:8443-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/hello-dev:8443-tcp */ tcp to:10.129.0.11:8443

Chain KUBE-SEP-UQH3AOCMAGJVJCVP (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.129.0.11          0.0.0.0/0            /* proj-dev/hello-dev:8080-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/hello-dev:8080-tcp */ tcp to:10.129.0.11:8080

Chain KUBE-SEP-UZ5MECAREJNVT225 (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.131.0.24          0.0.0.0/0            /* proj-dev/client-dev:8080-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/client-dev:8080-tcp */ tcp to:10.131.0.24:8080

Chain KUBE-SEP-VVAKUCBAYBP7DQSG (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.16.99.21         0.0.0.0/0            /* default/kubernetes:https */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https */ tcp to:172.16.99.21:8443

Chain KUBE-SEP-YT42LI3QHDUZDQKN (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.128.0.21          0.0.0.0/0            /* openshift-web-console/webconsole:https */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* openshift-web-console/webconsole:https */ tcp to:10.128.0.21:8443

Chain KUBE-SEP-ZHHGZ3QUG44B7VMG (2 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  10.130.0.5           0.0.0.0/0            /* default/docker-registry:5000-tcp */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/docker-registry:5000-tcp */ recent: SET name: KUBE-SEP-ZHHGZ3QUG44B7VMG side: source mask: 255.255.255.255 tcp to:10.130.0.5:5000

Chain KUBE-SERVICES (2 references)
target     prot opt source               destination         
KUBE-SVC-IKV43KYNCXS2W7KZ  tcp  --  0.0.0.0/0            172.30.125.3         /* default/router:443-tcp cluster IP */ tcp dpt:443
KUBE-SVC-FWKGB3Q3RSS3IXQB  tcp  --  0.0.0.0/0            172.30.227.156       /* proj-dev/client-dev:8080-tcp cluster IP */ tcp dpt:8080
KUBE-SVC-NPX46M4PTMTKRN6Y  tcp  --  0.0.0.0/0            172.30.0.1           /* default/kubernetes:https cluster IP */ tcp dpt:443
KUBE-SVC-4JCRTMMYZAAYMIJ2  tcp  --  0.0.0.0/0            172.30.125.3         /* default/router:1936-tcp cluster IP */ tcp dpt:1936
KUBE-SVC-2O3SXCDVWWS7KYC5  tcp  --  0.0.0.0/0            172.30.167.141       /* openshift-console/console:https cluster IP */ tcp dpt:443
KUBE-SVC-6BSYHN44TEZZY2UQ  tcp  --  0.0.0.0/0            172.30.200.68        /* proj-ops/hello-ops:8080-tcp cluster IP */ tcp dpt:8080
KUBE-SVC-RSCAZFDEJC3Y566B  tcp  --  0.0.0.0/0            172.30.36.145        /* proj-dev/hello-dev:8080-tcp cluster IP */ tcp dpt:8080
KUBE-SVC-PRPSSNUK2SS2LST3  tcp  --  0.0.0.0/0            172.30.36.145        /* proj-dev/hello-dev:8443-tcp cluster IP */ tcp dpt:8443
KUBE-SVC-BA6I5HTZKAAAJT56  tcp  --  0.0.0.0/0            172.30.0.1           /* default/kubernetes:dns-tcp cluster IP */ tcp dpt:53
KUBE-SVC-3VQ6B3MLH7E2SZT4  udp  --  0.0.0.0/0            172.30.0.1           /* default/kubernetes:dns cluster IP */ udp dpt:53
KUBE-SVC-ECTPRXTXBM34L34Q  tcp  --  0.0.0.0/0            172.30.195.220       /* default/docker-registry:5000-tcp cluster IP */ tcp dpt:5000
KUBE-SVC-ADCURMKBWTVYQV3X  tcp  --  0.0.0.0/0            172.30.151.214       /* openshift-web-console/webconsole:https cluster IP */ tcp dpt:443
KUBE-SVC-HBG4FWHPMJR5V55H  tcp  --  0.0.0.0/0            172.30.200.68        /* proj-ops/hello-ops:8443-tcp cluster IP */ tcp dpt:8443
KUBE-SVC-P35ORAQE2E6DMA7G  tcp  --  0.0.0.0/0            172.30.227.156       /* proj-dev/client-dev:8443-tcp cluster IP */ tcp dpt:8443
KUBE-SVC-GQKZAHCS5DTMHUQ6  tcp  --  0.0.0.0/0            172.30.125.3         /* default/router:80-tcp cluster IP */ tcp dpt:80
KUBE-SVC-DEGCXZMVXZMJS2KL  tcp  --  0.0.0.0/0            172.30.241.46        /* default/registry-console:registry-console cluster IP */ tcp dpt:9000
KUBE-SVC-OYK7BLJOZHX4T6VV  tcp  --  0.0.0.0/0            172.30.178.162       /* proj-ops/client-ops:8443-tcp cluster IP */ tcp dpt:8443
KUBE-SVC-UYXOSTZPSP6BIUNN  tcp  --  0.0.0.0/0            172.30.178.162       /* proj-ops/client-ops:8080-tcp cluster IP */ tcp dpt:8080
KUBE-NODEPORTS  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service nodeports; NOTE: this must be the last rule in this chain */ ADDRTYPE match dst-type LOCAL

Chain KUBE-SVC-2O3SXCDVWWS7KYC5 (1 references)
target     prot opt source               destination         
KUBE-SEP-LQCK36TWXKYXZNE4  all  --  0.0.0.0/0            0.0.0.0/0            /* openshift-console/console:https */

Chain KUBE-SVC-3VQ6B3MLH7E2SZT4 (1 references)
target     prot opt source               destination         
KUBE-SEP-4TUTTIJ2UOQVWSKB  all  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:dns */

Chain KUBE-SVC-4JCRTMMYZAAYMIJ2 (1 references)
target     prot opt source               destination         
KUBE-SEP-2Y5VLQNKQRZGKMGH  all  --  0.0.0.0/0            0.0.0.0/0            /* default/router:1936-tcp */

Chain KUBE-SVC-6BSYHN44TEZZY2UQ (1 references)
target     prot opt source               destination         
KUBE-SEP-JCLB6SDYRDYTDDDM  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/hello-ops:8080-tcp */

Chain KUBE-SVC-ADCURMKBWTVYQV3X (1 references)
target     prot opt source               destination         
KUBE-SEP-YT42LI3QHDUZDQKN  all  --  0.0.0.0/0            0.0.0.0/0            /* openshift-web-console/webconsole:https */

Chain KUBE-SVC-BA6I5HTZKAAAJT56 (1 references)
target     prot opt source               destination         
KUBE-SEP-IKYHWPR237VRLK44  all  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:dns-tcp */

Chain KUBE-SVC-DEGCXZMVXZMJS2KL (1 references)
target     prot opt source               destination         
KUBE-SEP-OZQI5YLIP6C22J6A  all  --  0.0.0.0/0            0.0.0.0/0            /* default/registry-console:registry-console */

Chain KUBE-SVC-ECTPRXTXBM34L34Q (1 references)
target     prot opt source               destination         
KUBE-SEP-ZHHGZ3QUG44B7VMG  all  --  0.0.0.0/0            0.0.0.0/0            /* default/docker-registry:5000-tcp */ recent: CHECK seconds: 10800 reap name: KUBE-SEP-ZHHGZ3QUG44B7VMG side: source mask: 255.255.255.255
KUBE-SEP-ZHHGZ3QUG44B7VMG  all  --  0.0.0.0/0            0.0.0.0/0            /* default/docker-registry:5000-tcp */

Chain KUBE-SVC-FWKGB3Q3RSS3IXQB (1 references)
target     prot opt source               destination         
KUBE-SEP-UZ5MECAREJNVT225  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/client-dev:8080-tcp */

Chain KUBE-SVC-GQKZAHCS5DTMHUQ6 (1 references)
target     prot opt source               destination         
KUBE-SEP-DYBCDPYDI3EFDB3U  all  --  0.0.0.0/0            0.0.0.0/0            /* default/router:80-tcp */

Chain KUBE-SVC-HBG4FWHPMJR5V55H (1 references)
target     prot opt source               destination         
KUBE-SEP-JXCH5FI3G5OJUXGJ  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/hello-ops:8443-tcp */

Chain KUBE-SVC-IKV43KYNCXS2W7KZ (1 references)
target     prot opt source               destination         
KUBE-SEP-4DWPNOZGSTC5ZGSY  all  --  0.0.0.0/0            0.0.0.0/0            /* default/router:443-tcp */

Chain KUBE-SVC-NPX46M4PTMTKRN6Y (1 references)
target     prot opt source               destination         
KUBE-SEP-VVAKUCBAYBP7DQSG  all  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https */

Chain KUBE-SVC-OYK7BLJOZHX4T6VV (1 references)
target     prot opt source               destination         
KUBE-SEP-35LYRIYLDOKO2LBI  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/client-ops:8443-tcp */

Chain KUBE-SVC-P35ORAQE2E6DMA7G (1 references)
target     prot opt source               destination         
KUBE-SEP-OTJGSWA3CRZRRKGR  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/client-dev:8443-tcp */

Chain KUBE-SVC-PRPSSNUK2SS2LST3 (1 references)
target     prot opt source               destination         
KUBE-SEP-QUGJG6JSJAZVGMPA  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/hello-dev:8443-tcp */

Chain KUBE-SVC-RSCAZFDEJC3Y566B (1 references)
target     prot opt source               destination         
KUBE-SEP-UQH3AOCMAGJVJCVP  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-dev/hello-dev:8080-tcp */

Chain KUBE-SVC-UYXOSTZPSP6BIUNN (1 references)
target     prot opt source               destination         
KUBE-SEP-OB5IWPCFFLXDNZ5H  all  --  0.0.0.0/0            0.0.0.0/0            /* proj-ops/client-ops:8080-tcp */

Chain OPENSHIFT-MASQUERADE (1 references)
target     prot opt source               destination         
OPENSHIFT-MASQUERADE-2  all  --  10.128.0.0/14        0.0.0.0/0            /* masquerade pod-to-external traffic */

Chain OPENSHIFT-MASQUERADE-2 (1 references)
target     prot opt source               destination         
RETURN     all  --  0.0.0.0/0            10.128.0.0/14        /* masquerade pod-to-external traffic */
MASQUERADE  all  --  0.0.0.0/0            0.0.0.0/0           
=> iptables-save
# Generated by iptables-save v1.4.21 on Tue Nov 13 16:47:00 2018
*nat
:PREROUTING ACCEPT [105:6759]
:INPUT ACCEPT [9:540]
:OUTPUT ACCEPT [31:2131]
:POSTROUTING ACCEPT [31:2131]
:DOCKER - [0:0]
:KUBE-HOSTPORTS - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORT-CONTAINER - [0:0]
:KUBE-NODEPORT-HOST - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PORTALS-CONTAINER - [0:0]
:KUBE-PORTALS-HOST - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-2Y5VLQNKQRZGKMGH - [0:0]
:KUBE-SEP-35LYRIYLDOKO2LBI - [0:0]
:KUBE-SEP-4DWPNOZGSTC5ZGSY - [0:0]
:KUBE-SEP-4TUTTIJ2UOQVWSKB - [0:0]
:KUBE-SEP-DYBCDPYDI3EFDB3U - [0:0]
:KUBE-SEP-IKYHWPR237VRLK44 - [0:0]
:KUBE-SEP-JCLB6SDYRDYTDDDM - [0:0]
:KUBE-SEP-JXCH5FI3G5OJUXGJ - [0:0]
:KUBE-SEP-LQCK36TWXKYXZNE4 - [0:0]
:KUBE-SEP-OB5IWPCFFLXDNZ5H - [0:0]
:KUBE-SEP-OTJGSWA3CRZRRKGR - [0:0]
:KUBE-SEP-OZQI5YLIP6C22J6A - [0:0]
:KUBE-SEP-QUGJG6JSJAZVGMPA - [0:0]
:KUBE-SEP-UQH3AOCMAGJVJCVP - [0:0]
:KUBE-SEP-UZ5MECAREJNVT225 - [0:0]
:KUBE-SEP-VVAKUCBAYBP7DQSG - [0:0]
:KUBE-SEP-YT42LI3QHDUZDQKN - [0:0]
:KUBE-SEP-ZHHGZ3QUG44B7VMG - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-2O3SXCDVWWS7KYC5 - [0:0]
:KUBE-SVC-3VQ6B3MLH7E2SZT4 - [0:0]
:KUBE-SVC-4JCRTMMYZAAYMIJ2 - [0:0]
:KUBE-SVC-6BSYHN44TEZZY2UQ - [0:0]
:KUBE-SVC-ADCURMKBWTVYQV3X - [0:0]
:KUBE-SVC-BA6I5HTZKAAAJT56 - [0:0]
:KUBE-SVC-DEGCXZMVXZMJS2KL - [0:0]
:KUBE-SVC-ECTPRXTXBM34L34Q - [0:0]
:KUBE-SVC-FWKGB3Q3RSS3IXQB - [0:0]
:KUBE-SVC-GQKZAHCS5DTMHUQ6 - [0:0]
:KUBE-SVC-HBG4FWHPMJR5V55H - [0:0]
:KUBE-SVC-IKV43KYNCXS2W7KZ - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-OYK7BLJOZHX4T6VV - [0:0]
:KUBE-SVC-P35ORAQE2E6DMA7G - [0:0]
:KUBE-SVC-PRPSSNUK2SS2LST3 - [0:0]
:KUBE-SVC-RSCAZFDEJC3Y566B - [0:0]
:KUBE-SVC-UYXOSTZPSP6BIUNN - [0:0]
:OPENSHIFT-MASQUERADE - [0:0]
:OPENSHIFT-MASQUERADE-2 - [0:0]
-A PREROUTING -m comment --comment "handle ClusterIPs; NOTE: this must be before the NodePort rules" -j KUBE-PORTALS-CONTAINER
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m comment --comment "kube hostport portals" -m addrtype --dst-type LOCAL -j KUBE-HOSTPORTS
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -m addrtype --dst-type LOCAL -m comment --comment "handle service NodePorts; NOTE: this must be the last rule in the chain" -j KUBE-NODEPORT-CONTAINER
-A OUTPUT -m comment --comment "handle ClusterIPs; NOTE: this must be before the NodePort rules" -j KUBE-PORTALS-HOST
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "kube hostport portals" -m addrtype --dst-type LOCAL -j KUBE-HOSTPORTS
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -m comment --comment "handle service NodePorts; NOTE: this must be the last rule in the chain" -j KUBE-NODEPORT-HOST
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -m comment --comment "rules for masquerading OpenShift traffic" -j OPENSHIFT-MASQUERADE
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 127.0.0.0/8 -o tun0 -m comment --comment "SNAT for localhost access to hostports" -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x1/0x1
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x1/0x1 -j MASQUERADE
-A KUBE-SEP-2Y5VLQNKQRZGKMGH -s 172.16.99.31/32 -m comment --comment "default/router:1936-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-2Y5VLQNKQRZGKMGH -p tcp -m comment --comment "default/router:1936-tcp" -m tcp -j DNAT --to-destination 172.16.99.31:1936
-A KUBE-SEP-35LYRIYLDOKO2LBI -s 10.129.0.16/32 -m comment --comment "proj-ops/client-ops:8443-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-35LYRIYLDOKO2LBI -p tcp -m comment --comment "proj-ops/client-ops:8443-tcp" -m tcp -j DNAT --to-destination 10.129.0.16:8443
-A KUBE-SEP-4DWPNOZGSTC5ZGSY -s 172.16.99.31/32 -m comment --comment "default/router:443-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-4DWPNOZGSTC5ZGSY -p tcp -m comment --comment "default/router:443-tcp" -m tcp -j DNAT --to-destination 172.16.99.31:443
-A KUBE-SEP-4TUTTIJ2UOQVWSKB -s 172.16.99.21/32 -m comment --comment "default/kubernetes:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-4TUTTIJ2UOQVWSKB -p udp -m comment --comment "default/kubernetes:dns" -m udp -j DNAT --to-destination 172.16.99.21:8053
-A KUBE-SEP-DYBCDPYDI3EFDB3U -s 172.16.99.31/32 -m comment --comment "default/router:80-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-DYBCDPYDI3EFDB3U -p tcp -m comment --comment "default/router:80-tcp" -m tcp -j DNAT --to-destination 172.16.99.31:80
-A KUBE-SEP-IKYHWPR237VRLK44 -s 172.16.99.21/32 -m comment --comment "default/kubernetes:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-IKYHWPR237VRLK44 -p tcp -m comment --comment "default/kubernetes:dns-tcp" -m tcp -j DNAT --to-destination 172.16.99.21:8053
-A KUBE-SEP-JCLB6SDYRDYTDDDM -s 10.131.0.16/32 -m comment --comment "proj-ops/hello-ops:8080-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-JCLB6SDYRDYTDDDM -p tcp -m comment --comment "proj-ops/hello-ops:8080-tcp" -m tcp -j DNAT --to-destination 10.131.0.16:8080
-A KUBE-SEP-JXCH5FI3G5OJUXGJ -s 10.131.0.16/32 -m comment --comment "proj-ops/hello-ops:8443-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-JXCH5FI3G5OJUXGJ -p tcp -m comment --comment "proj-ops/hello-ops:8443-tcp" -m tcp -j DNAT --to-destination 10.131.0.16:8443
-A KUBE-SEP-LQCK36TWXKYXZNE4 -s 10.128.0.22/32 -m comment --comment "openshift-console/console:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-LQCK36TWXKYXZNE4 -p tcp -m comment --comment "openshift-console/console:https" -m tcp -j DNAT --to-destination 10.128.0.22:8443
-A KUBE-SEP-OB5IWPCFFLXDNZ5H -s 10.129.0.16/32 -m comment --comment "proj-ops/client-ops:8080-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-OB5IWPCFFLXDNZ5H -p tcp -m comment --comment "proj-ops/client-ops:8080-tcp" -m tcp -j DNAT --to-destination 10.129.0.16:8080
-A KUBE-SEP-OTJGSWA3CRZRRKGR -s 10.131.0.24/32 -m comment --comment "proj-dev/client-dev:8443-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-OTJGSWA3CRZRRKGR -p tcp -m comment --comment "proj-dev/client-dev:8443-tcp" -m tcp -j DNAT --to-destination 10.131.0.24:8443
-A KUBE-SEP-OZQI5YLIP6C22J6A -s 10.128.0.20/32 -m comment --comment "default/registry-console:registry-console" -j KUBE-MARK-MASQ
-A KUBE-SEP-OZQI5YLIP6C22J6A -p tcp -m comment --comment "default/registry-console:registry-console" -m tcp -j DNAT --to-destination 10.128.0.20:9090
-A KUBE-SEP-QUGJG6JSJAZVGMPA -s 10.129.0.11/32 -m comment --comment "proj-dev/hello-dev:8443-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-QUGJG6JSJAZVGMPA -p tcp -m comment --comment "proj-dev/hello-dev:8443-tcp" -m tcp -j DNAT --to-destination 10.129.0.11:8443
-A KUBE-SEP-UQH3AOCMAGJVJCVP -s 10.129.0.11/32 -m comment --comment "proj-dev/hello-dev:8080-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-UQH3AOCMAGJVJCVP -p tcp -m comment --comment "proj-dev/hello-dev:8080-tcp" -m tcp -j DNAT --to-destination 10.129.0.11:8080
-A KUBE-SEP-UZ5MECAREJNVT225 -s 10.131.0.24/32 -m comment --comment "proj-dev/client-dev:8080-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-UZ5MECAREJNVT225 -p tcp -m comment --comment "proj-dev/client-dev:8080-tcp" -m tcp -j DNAT --to-destination 10.131.0.24:8080
-A KUBE-SEP-VVAKUCBAYBP7DQSG -s 172.16.99.21/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-VVAKUCBAYBP7DQSG -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 172.16.99.21:8443
-A KUBE-SEP-YT42LI3QHDUZDQKN -s 10.128.0.21/32 -m comment --comment "openshift-web-console/webconsole:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-YT42LI3QHDUZDQKN -p tcp -m comment --comment "openshift-web-console/webconsole:https" -m tcp -j DNAT --to-destination 10.128.0.21:8443
-A KUBE-SEP-ZHHGZ3QUG44B7VMG -s 10.130.0.5/32 -m comment --comment "default/docker-registry:5000-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZHHGZ3QUG44B7VMG -p tcp -m comment --comment "default/docker-registry:5000-tcp" -m recent --set --name KUBE-SEP-ZHHGZ3QUG44B7VMG --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.130.0.5:5000
-A KUBE-SERVICES -d 172.30.125.3/32 -p tcp -m comment --comment "default/router:443-tcp cluster IP" -m tcp --dport 443 -j KUBE-SVC-IKV43KYNCXS2W7KZ
-A KUBE-SERVICES -d 172.30.227.156/32 -p tcp -m comment --comment "proj-dev/client-dev:8080-tcp cluster IP" -m tcp --dport 8080 -j KUBE-SVC-FWKGB3Q3RSS3IXQB
-A KUBE-SERVICES -d 172.30.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 172.30.125.3/32 -p tcp -m comment --comment "default/router:1936-tcp cluster IP" -m tcp --dport 1936 -j KUBE-SVC-4JCRTMMYZAAYMIJ2
-A KUBE-SERVICES -d 172.30.167.141/32 -p tcp -m comment --comment "openshift-console/console:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-2O3SXCDVWWS7KYC5
-A KUBE-SERVICES -d 172.30.200.68/32 -p tcp -m comment --comment "proj-ops/hello-ops:8080-tcp cluster IP" -m tcp --dport 8080 -j KUBE-SVC-6BSYHN44TEZZY2UQ
-A KUBE-SERVICES -d 172.30.36.145/32 -p tcp -m comment --comment "proj-dev/hello-dev:8080-tcp cluster IP" -m tcp --dport 8080 -j KUBE-SVC-RSCAZFDEJC3Y566B
-A KUBE-SERVICES -d 172.30.36.145/32 -p tcp -m comment --comment "proj-dev/hello-dev:8443-tcp cluster IP" -m tcp --dport 8443 -j KUBE-SVC-PRPSSNUK2SS2LST3
-A KUBE-SERVICES -d 172.30.0.1/32 -p tcp -m comment --comment "default/kubernetes:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-BA6I5HTZKAAAJT56
-A KUBE-SERVICES -d 172.30.0.1/32 -p udp -m comment --comment "default/kubernetes:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-3VQ6B3MLH7E2SZT4
-A KUBE-SERVICES -d 172.30.195.220/32 -p tcp -m comment --comment "default/docker-registry:5000-tcp cluster IP" -m tcp --dport 5000 -j KUBE-SVC-ECTPRXTXBM34L34Q
-A KUBE-SERVICES -d 172.30.151.214/32 -p tcp -m comment --comment "openshift-web-console/webconsole:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-ADCURMKBWTVYQV3X
-A KUBE-SERVICES -d 172.30.200.68/32 -p tcp -m comment --comment "proj-ops/hello-ops:8443-tcp cluster IP" -m tcp --dport 8443 -j KUBE-SVC-HBG4FWHPMJR5V55H
-A KUBE-SERVICES -d 172.30.227.156/32 -p tcp -m comment --comment "proj-dev/client-dev:8443-tcp cluster IP" -m tcp --dport 8443 -j KUBE-SVC-P35ORAQE2E6DMA7G
-A KUBE-SERVICES -d 172.30.125.3/32 -p tcp -m comment --comment "default/router:80-tcp cluster IP" -m tcp --dport 80 -j KUBE-SVC-GQKZAHCS5DTMHUQ6
-A KUBE-SERVICES -d 172.30.241.46/32 -p tcp -m comment --comment "default/registry-console:registry-console cluster IP" -m tcp --dport 9000 -j KUBE-SVC-DEGCXZMVXZMJS2KL
-A KUBE-SERVICES -d 172.30.178.162/32 -p tcp -m comment --comment "proj-ops/client-ops:8443-tcp cluster IP" -m tcp --dport 8443 -j KUBE-SVC-OYK7BLJOZHX4T6VV
-A KUBE-SERVICES -d 172.30.178.162/32 -p tcp -m comment --comment "proj-ops/client-ops:8080-tcp cluster IP" -m tcp --dport 8080 -j KUBE-SVC-UYXOSTZPSP6BIUNN
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-2O3SXCDVWWS7KYC5 -m comment --comment "openshift-console/console:https" -j KUBE-SEP-LQCK36TWXKYXZNE4
-A KUBE-SVC-3VQ6B3MLH7E2SZT4 -m comment --comment "default/kubernetes:dns" -j KUBE-SEP-4TUTTIJ2UOQVWSKB
-A KUBE-SVC-4JCRTMMYZAAYMIJ2 -m comment --comment "default/router:1936-tcp" -j KUBE-SEP-2Y5VLQNKQRZGKMGH
-A KUBE-SVC-6BSYHN44TEZZY2UQ -m comment --comment "proj-ops/hello-ops:8080-tcp" -j KUBE-SEP-JCLB6SDYRDYTDDDM
-A KUBE-SVC-ADCURMKBWTVYQV3X -m comment --comment "openshift-web-console/webconsole:https" -j KUBE-SEP-YT42LI3QHDUZDQKN
-A KUBE-SVC-BA6I5HTZKAAAJT56 -m comment --comment "default/kubernetes:dns-tcp" -j KUBE-SEP-IKYHWPR237VRLK44
-A KUBE-SVC-DEGCXZMVXZMJS2KL -m comment --comment "default/registry-console:registry-console" -j KUBE-SEP-OZQI5YLIP6C22J6A
-A KUBE-SVC-ECTPRXTXBM34L34Q -m comment --comment "default/docker-registry:5000-tcp" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-ZHHGZ3QUG44B7VMG --mask 255.255.255.255 --rsource -j KUBE-SEP-ZHHGZ3QUG44B7VMG
-A KUBE-SVC-ECTPRXTXBM34L34Q -m comment --comment "default/docker-registry:5000-tcp" -j KUBE-SEP-ZHHGZ3QUG44B7VMG
-A KUBE-SVC-FWKGB3Q3RSS3IXQB -m comment --comment "proj-dev/client-dev:8080-tcp" -j KUBE-SEP-UZ5MECAREJNVT225
-A KUBE-SVC-GQKZAHCS5DTMHUQ6 -m comment --comment "default/router:80-tcp" -j KUBE-SEP-DYBCDPYDI3EFDB3U
-A KUBE-SVC-HBG4FWHPMJR5V55H -m comment --comment "proj-ops/hello-ops:8443-tcp" -j KUBE-SEP-JXCH5FI3G5OJUXGJ
-A KUBE-SVC-IKV43KYNCXS2W7KZ -m comment --comment "default/router:443-tcp" -j KUBE-SEP-4DWPNOZGSTC5ZGSY
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-VVAKUCBAYBP7DQSG
-A KUBE-SVC-OYK7BLJOZHX4T6VV -m comment --comment "proj-ops/client-ops:8443-tcp" -j KUBE-SEP-35LYRIYLDOKO2LBI
-A KUBE-SVC-P35ORAQE2E6DMA7G -m comment --comment "proj-dev/client-dev:8443-tcp" -j KUBE-SEP-OTJGSWA3CRZRRKGR
-A KUBE-SVC-PRPSSNUK2SS2LST3 -m comment --comment "proj-dev/hello-dev:8443-tcp" -j KUBE-SEP-QUGJG6JSJAZVGMPA
-A KUBE-SVC-RSCAZFDEJC3Y566B -m comment --comment "proj-dev/hello-dev:8080-tcp" -j KUBE-SEP-UQH3AOCMAGJVJCVP
-A KUBE-SVC-UYXOSTZPSP6BIUNN -m comment --comment "proj-ops/client-ops:8080-tcp" -j KUBE-SEP-OB5IWPCFFLXDNZ5H
-A OPENSHIFT-MASQUERADE -s 10.128.0.0/14 -m comment --comment "masquerade pod-to-external traffic" -j OPENSHIFT-MASQUERADE-2
-A OPENSHIFT-MASQUERADE-2 -d 10.128.0.0/14 -m comment --comment "masquerade pod-to-external traffic" -j RETURN
-A OPENSHIFT-MASQUERADE-2 -j MASQUERADE
COMMIT
# Completed on Tue Nov 13 16:47:00 2018
# Generated by iptables-save v1.4.21 on Tue Nov 13 16:47:00 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1025:137562]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-NODEPORT-NON-LOCAL - [0:0]
:KUBE-SERVICES - [0:0]
:OPENSHIFT-ADMIN-OUTPUT-RULES - [0:0]
:OPENSHIFT-FIREWALL-ALLOW - [0:0]
:OPENSHIFT-FIREWALL-FORWARD - [0:0]
:OS_FIREWALL_ALLOW - [0:0]
-A INPUT -m comment --comment "Ensure that non-local NodePort traffic can flow" -j KUBE-NODEPORT-NON-LOCAL
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -m comment --comment "firewall overrides" -j OPENSHIFT-FIREWALL-ALLOW
-A INPUT -j KUBE-FIREWALL
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j OS_FIREWALL_ALLOW
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -i tun0 ! -o tun0 -m comment --comment "administrator overrides" -j OPENSHIFT-ADMIN-OUTPUT-RULES
-A FORWARD -m comment --comment "firewall overrides" -j OPENSHIFT-FIREWALL-FORWARD
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x1/0x1 -j ACCEPT
-A OPENSHIFT-FIREWALL-ALLOW -p udp -m udp --dport 4789 -m comment --comment "VXLAN incoming" -j ACCEPT
-A OPENSHIFT-FIREWALL-ALLOW -i tun0 -m comment --comment "from SDN to localhost" -j ACCEPT
-A OPENSHIFT-FIREWALL-ALLOW -i docker0 -m comment --comment "from docker to localhost" -j ACCEPT
-A OPENSHIFT-FIREWALL-FORWARD -s 10.128.0.0/14 -m comment --comment "attempted resend after connection close" -m conntrack --ctstate INVALID -j DROP
-A OPENSHIFT-FIREWALL-FORWARD -d 10.128.0.0/14 -m comment --comment "forward traffic from SDN" -j ACCEPT
-A OPENSHIFT-FIREWALL-FORWARD -s 10.128.0.0/14 -m comment --comment "forward traffic to SDN" -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 10250 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 10256 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A OS_FIREWALL_ALLOW -p udp -m state --state NEW -m udp --dport 4789 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 9000:10000 -j ACCEPT
-A OS_FIREWALL_ALLOW -p tcp -m state --state NEW -m tcp --dport 179 -j ACCEPT
COMMIT
# Completed on Tue Nov 13 16:47:00 2018
